refactor: lazy WebSocket, sync context creation, unified tokio runtime (4.0.5)
- Lazy WebSocket connection: WS connects on first use instead of at creation.
  QuoteContext and TradeContext no longer perform any I/O at construction time.

- Sync context creation: QuoteContext::new / TradeContext::new are now
  infallible synchronous functions returning Self directly.
  All language bindings updated accordingly:
  - C: lb_quote/trade_context_new returns the context pointer directly
  - C++: QuoteContext/TradeContext::create returns the object directly
  - Java: QuoteContext/TradeContext.create() returns the object directly
  - Node.js: QuoteContext/TradeContext.new is now a sync static method
  - Python: AsyncQuoteContext/TradeContext.create is now a sync classmethod
  - Rust blocking: QuoteContextSync/TradeContextSync::new returns Self directly

- Unified tokio runtime: a single global LazyLock<Runtime> in the longbridge
  crate is shared across all bindings; no more per-binding runtimes.

- member_id / quote_level / quote_package_details promoted to async API
  methods (were previously sync fields); updated across all bindings.

- Java: fix Javadoc formatting in QuoteContext/TradeContext examples,
  add missing content package classes to compile task, use platform-aware
  classpath separator in Makefile.toml, add --enable-native-access=ALL-UNNAMED.

- Node.js: update all doc-comment examples to sync QuoteContext/TradeContext.new.

- Bump version to 4.0.5.